--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,32 @@
-<h2>Sign up</h2>
+<% provide(:title, 'Sign up') %>
+<% @body_id = "sign-up-page" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+ <a class="navbar-brand" href="/">SEO Content Dashboard</a>
+	 	<div class="col-md-5 col-md-offset-1">
+			<div class="login-panel panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Sign up</h3>
+				</div>
+				<div class="panel-body">
+					<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+					  <%= devise_error_messages! %>
+  				  <div class="form-group"><%= f.label :email %>
+  					<%= f.email_field :email, autofocus: true, :class => 'form-control' %></div>
+  
+  				  <div class="form-group"><%= f.label :password %>
+    				  <%= f.password_field :password, autocomplete: "off", :class => 'form-control' %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+				    <div class="form-group"><%= f.label :password_confirmation %>
+				      <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control' %></div>  
+ 					 <div class="checkbox"> <% if devise_mapping.rememberable? -%>
+   					  <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+ 					 <% end -%>
+				 </div>
+				 <%= f.submit "Sign up", :class => 'btn btn-lg btn-success btn-block'  %>
+				 <% end %>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+				 <%= render "devise/shared/links" %>
+			 </div>
+		 </div>
+	 </div>
+</div>
