--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                </button>
-	                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+	                <a class="navbar-brand" href="/">SEO Content Dashboard</a>
 	            </div>
 	            <!-- /.navbar-header -->
 	 
@@ -23,10 +23,14 @@
 					                    </a>
 					                    <ul class="dropdown-menu dropdown-user">
 									
-					                        <li><% if user_signed_in? %><%= link_to ' ', edit_user_registration_path %><i class="fa fa-gear fa-fw">Settings</i><% else %><%end%>
+					                        <li><% if user_signed_in? %>
+												 <%= link_to edit_user_registration_path do %><i class="fa fa-gear fa-fw"></i> Settings<% end %>
+												<% else %><%end%>
 					                        </li>
 					                        <li class="divider"></li>
-					                        <li><% if user_signed_in? %><%= link_to "Logout", destroy_user_session_path, method: :delete%><i class='fa fa-sign-out fa-fw' ></i><% else %><%end%>
+					                        <li><% if user_signed_in? %>
+												 <%= link_to destroy_user_session_path, method: :delete do %><i class="fa fa-sign-out fa-fw"></i> Log out<% end %>
+												<% else %><%end%>
 					                        </li>
 					                    </ul>
 						<% else %>	<% end %>
@@ -49,16 +53,8 @@
 						                        <%= link_to "/dashboard" do %><i class="fa fa-dashboard fa-fw"></i> Dashboard<% end %>
 						                    </li>
 						                    <li>
-						                        <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-						                        <ul class="nav nav-second-level">
-						                            <li>
-						                                <a href="flot.html">Flot Charts</a>
-						                            </li>
-						                            <li>
-						                                <a href="morris.html">Morris.js Charts</a>
-						                            </li>
-						                        </ul>
-						                        <!-- /.nav-second-level -->
+						                        <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> WDF*IDF Analysis<span class="fa arrow"></span></a>
+			
 						                    </li>
 											<% else %><%end%>
 						
