--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,15 @@
 <!-- /#wrapper -->
 </body>
 </html>
-<div class="container footer">
+<div class="footer">
     <p class="muted credit">© seoliberalismus 2014</p>
 </div>
+<!--
+
+Template: SB Admin V2 
+https://github.com/ironsummitmedia/startbootstrap/ 
+Copyright 2013 Iron Summit Media Strategies
+
+Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 .
+Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+*/ -->
