--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -1,10 +1,34 @@
 <%= form_tag do %>
  <%= text_field_tag(:keyword) %>
- <%= submit_tag("Perform") %>
+ <%= submit_tag("Analyze") %>
 <% end %>
 
-<% if @view %>
+
+ <% if @view %>
+<div class="table-responsive">
+<table class="table-hover">
+  <tr>
+    <th>Position</th>
+    <th>URL</th>
+    <th>URL-Host</th>
+    <th>Words</th>
+    <th>Title</th>
+    <th>Description</th>
+  </tr>
   <%= @view.each do |serp| %>
-  	<p><%= serp.inspect %></p>
+  <tr>
+    <td></td>
+    <td><%= puts @url.to_s %></td>
+    <td><%= :url_host  %></td>
+    <td><%= :count  %></td>
+    <td><%= :title%></td>
+    <td><%= :description%></td>
+  </tr>
+    <% end %>
   <% end %>
-<% end %>
+</table>
+</div>
+
+ 
+
+     
