--- a/app/assets/stylesheets/style.css.css
+++ b/app/assets/stylesheets/style.css.css
@@ -14,6 +14,11 @@
     width: 100%;
 }
 
+a {
+    color: #428BCA !important;
+    text-decoration: none;
+}
+
 #page-wrapper {
     padding: 0 15px;
     min-height: 568px;
@@ -352,4 +357,5 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     padding: 4px 6px;
     vertical-align: middle;
 }
+
 
