WDF Berechnung hinzugefügt

--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -27,9 +27,9 @@
             <%= @view.each do |serp| %>
             <tr>
               <td><%=  %></td>
-              <td><%= %></td>
+              <td><%= :url %></td>
               <td><%= :url_host  %></td>
-              <td><%= :count  %></td>
+              <td><%= :count %></td>
               <td><%= :title%></td>
               <td><%= :description%></td>
             </tr>
