Top-Ten Tabelle fertiggestellt

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,5 @@
- </div>
-<!-- /#wrapper -->
-</body>
-</html>
 <div class="footer">
-    <p class="muted credit">© seoliberalismus 2014</p>
+    <p class="muted credit">© Heiko Stammel 2014</p>
 </div>
 <!--
 
