--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -1,44 +1,55 @@
 <% provide(:title, 'WDF*IDF Aanalysis') %>
 <% @body_id = "wdf-idf" %>
-<div class="col-lg-12">
-  <h1 class="page-header">WDF*IDF Analysis</h1>
-</div>
-	 	<div class="col-md-5 col-md-offset-0">
-      
-      <%= form_tag do %>
-        <%= text_field_tag(:keyword, "Enter your keyword", disabled: false ) %>
-        <%= submit_tag("Analyze") %>
-      <% end %>
-      <% if @view %>
-        <div class="table-responsive">
-          <table class="table-hover">
-            <thead>
-            <tr>
-              <th>Position</th>
-              <th>URL</th>
-              <th>URL-Host</th>
-              <th>Words</th>
-              <th>Title</th>
-              <th>Description</th>
-            </tr>
-            </thead>
-            <tbody>
-            <%= @view.each do |serp| %>
-            <tr>
-              <td><%= %></td>
-              <td><%=  :url %></td>
-              <td><%= :url_host  %></td>
-              <td><%= :count %></td>
-              <td><%= :title%></td>
-              <td><%= :description%></td>
-            </tr>
-            <% end %>
-            </tbody>
-          </table>
-        </div>
-      <% end %>
-      
-
- 
-    </div>
-     
+  <div class="row">    
+        <div class="col-lg-12">
+              <h1 class="page-header">WDF*IDF-Analysis</h1>
+        </div>                       
+  </div>
+  <div class="row">    
+            <div class="col-lg-12">
+                  <%= form_tag do %>
+                    <%= text_field_tag(:keyword, "Enter your keyword") %>
+                    <%= submit_tag("Analyze", class:'btn btn-success') %>
+                  <% end %>
+            </div>                       
+   </div>
+    <% if @view %>
+   <div class="row">  
+        <div class="col-lg-12">
+              <div class="panel panel-default">
+                         <div class="panel-heading">
+                             Top-Ten Results
+                         </div>
+                     
+                         <div class="panel-body">
+                             <div class="table-responsive">
+                                 <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                 
+                                       <thead>
+                                        <tr>
+                                          <th>P</th>
+                                          <th>URL</th>
+                                          <th>URL-Host</th>
+                                          <th>Words</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <% @view.each_with_index do |serp, index| %>
+                                        <tr>
+                                          <td><%= index+1 %></td>
+                                          <td><%= serp[:url] %></td>
+                                          <td><%= serp[:url_host]  %></td>
+                                          <td><%= serp[:count] %></td>                                      
+                                        </tr>
+                                        <% end %>
+                                        </tbody>
+                                      </table>
+                                    </div>
+                            </div>
+                           
+                             
+                    </div>
+                      
+           </div>
+     </div>
+      <% end %>   
