--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -52,4 +52,59 @@
                       
            </div>
      </div>
+      <% @view.each_with_index do |serp, index| %>
+     <div class="row">  
+          <div class="col-lg-12">
+                <div class="panel panel-default">
+                           <div class="panel-heading">
+                               Result of <%= serp[:url] %>
+                           </div>
+                     
+                           <div class="panel-body">
+                               <div class="table-responsive">
+                                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                 
+                                         <thead>
+                                          <tr>
+                                            <th>Keyword</th>
+                                            <th>Amount</th>
+                                            <th>WDF</th>
+                                            <th>WDF*IDF</th>
+                                          </tr>
+                                          </thead>
+                                          <tbody>
+                                            <% @view.each_with_index do |serp, index| %>
+                                          <tr>
+                                            <td><%= @view[:wdf_keyword] %></td>
+                                            <td><%= serp[:idf_term] %></td>
+                                               <% end %>                                  
+                                          </tr>
+                                          
+                                          </tbody>
+                                        </table>
+                                      </div>
+                              </div>
+                           
+                             
+                      </div>
+                      
+             </div>
+       </div>
+       <div class="row">  
+            <div class="col-lg-12">
+                  <div class="panel panel-default">
+                             <div class="panel-heading">
+                                 WDF*IDF-Diagram of <%= serp[:url] %>
+                             </div>
+                     
+                             <div class="panel-body">
+                                 
+                                </div>
+                           
+                             
+                        </div>
+                      
+               </div>
+         </div>
+       <% end %>
       <% end %>   
