WDF*IDF ergänzt

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,12 +58,15 @@
                             <% end %>
 		                      </li>
                           <!-- /.nav-second-level -->
+                          <ul class="nav nav-second-level">
+                          
                           <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
                           </li>
                            <li>
                              <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
                            </li>
+                         </ul>
 					                 <% else %><%end%>		
 					</ul>
 					<!-- /#side-menu -->	
