--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -8,7 +8,7 @@
   <div class="row">    
             <div class="col-lg-12">
                   <%= form_tag do %>
-                    <%= text_field_tag(:keyword, "Enter your keyword") %>
+                    <%= text_field_tag(:keyword, nil, :placeholder => "Enter your keyword") %>
                     <%= submit_tag("Analyze", class:'btn btn-success') %>
                   <% end %>
             </div>                       
@@ -46,8 +46,7 @@
                                       </table>
                                     </div>
                             </div>
-                           
-                             
+                                          
                     </div>
                       
            </div>
@@ -62,7 +61,7 @@
                      
                            <div class="panel-body">
                                <div class="table-responsive">
-                                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                   <table class="table table-striped table-bordered table-hover class='datatable'" id="dataTables-example">
                                  
                                          <thead>
                                           <tr>
@@ -75,7 +74,9 @@
                                           <tbody>
                                             <% @view.each_with_index do |serp, index| %>
                                           <tr>
-                                            <td><%= @view[:wdf_keyword] %></td>
+                                            <td><%= serp[:term_count_filtered] %></td>
+                                            <td><%= serp[:term_count_filtered] %></td>
+                                            <td><%= serp[:wdf_term] %></td>
                                             <td><%= serp[:idf_term] %></td>
                                                <% end %>                                  
                                           </tr>
