--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,14 @@
 <% @body_id = "login-page" %>
 
 <div class="row">
-            
+     <div class="col-lg-12">
+       <div class="jumbotron">
+         <h1>WDF*IDF Analysis</h1>
+         <p>Optimize your website content with WDF*IDF to improve your visibility on the web - NOW!
+         <p>
+            <%= link_to "Start Analysis", analyze_path, :class => "btn btn-success" %>
+         </p>
+       </div>
+     </div>       
 		
 </div>
