--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -6,18 +6,26 @@
         </div>                       
   </div>
   <div class="row">    
-            <div class="col-lg-12">
+            <div class="col-md-6">
                   <%= form_tag do %>
                     <%= text_field_tag(:keyword, nil, :placeholder => "Enter your keyword") %>
                     <%= submit_tag("Analyze", class:'btn btn-success') %>
                   <% end %>
-            </div>                       
+            </div>   
+            <div class="col-md-6">
+                  <%= form_tag do %>
+                    <%= text_field_tag(:keyword, nil, :placeholder => "Enter your URL") %>
+                    <%= submit_tag("Analyze", class:'btn btn-success') %>
+                  <% end %>
+            </div>                    
    </div>
     <% if @view %>
+    
+    
    <div class="row">  
         <div class="col-lg-12">
               <div class="panel panel-default">
-                         <div class="panel-heading">
+                         <div class="panel-heading" name="top-ten-results" id="top-ten-results">
                              Top-Ten Results
                          </div>
                      
@@ -51,6 +59,45 @@
                       
            </div>
      </div>
+     
+     <div class="row">  
+          <div class="col-lg-12">
+                <div class="panel panel-default">
+                           <div class="panel-heading" name="top-ten-meta" id="top-ten-meta">
+                               Meta-Tags Top-Ten
+                           </div>
+                     
+                           <div class="panel-body">
+                               <div class="table-responsive">
+                                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                 
+                                         <thead>
+                                          <tr>
+                                            <th>URL</th>
+                                            <th>Description</th>
+                                            <th>Title</th>
+                                          </tr>
+                                          </thead>
+                                          <tbody>
+                                          <% @view.each_with_index do |serp, index| %>
+                                          <tr>
+                                            <td><%= serp[:url] %></td>
+                                            <td><%= serp[:description] %> (<%= serp[:description_count] %>)</td>
+                                            <td><%= serp[:title] %> (<%= serp[:title_count] %>)</td>  
+                                                                         
+                                          </tr>
+                                          <% end %>
+                                          </tbody>
+                                        </table>
+                                      </div>
+                              </div>
+                                          
+                      </div>
+                      
+             </div>
+       </div>
+       
+     
       <% @view.each_with_index do |serp, index| %>
      <div class="row">  
           <div class="col-lg-12">
@@ -73,16 +120,19 @@
                                           </thead>
                                           <tbody>
                                             <% @view.each_with_index do |serp, index| %>
+<%puts serp%>                              
                                           <tr>
-                                            <td><%= serp[:term_count_filtered] %></td>
-                                            <td><%= serp[:term_count_filtered] %></td>
-                                            <td><%= serp[:wdf_term] %></td>
-                                            <td><%= serp[:idf_term] %></td>
+                                            <td><%= serp[:term].first%></td>
+                                            <td><%= serp[:amount].first%></td>
+                                            <td><%= serp[:wdf].first%></td>
+                                            <td><%= serp[:idf].first%></td>
+                                            
                                                <% end %>                                  
                                           </tr>
                                           
                                           </tbody>
                                         </table>
+                                        
                                       </div>
                               </div>
                            
