--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -143,6 +143,7 @@
                                                 <td><%= serp[:amount].first %></td>
                                                 <td><%= serp[:wdf]%></td>
                                                 <td><%= serp[:idf] %></td>
+                                                 <td><%= serp[:all_terms] %></td>
                                        
                                           </tr>
                                               <% end %>
