--- a/app/views/wdfidf/index.html.erb
+++ b/app/views/wdfidf/index.html.erb
@@ -168,7 +168,8 @@
                              </div>
                      
                              <div class="panel-body">
-                                 
+                                <div id="graph" style="height: 500px;"></div>
+                                
                                 </div>
                            
                              
